<resources>
    <string name="app_name">Student Info</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_Name">Name:</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="text_sex">Sex:</string>
    <string name="text_rdbtn_male">Male</string>
    <string name="text_rdbtn_female">Female</string>
    <string name="text_date_of_birth">Date of birth:</string>
    <string name="hint_ddmmyy">dd-mm-yy</string>
    <string name="text_btn_pickadate">PICK A DATE</string>
    <string name="text_contact_info">Contact Info:</string>
    <string name="text_Address">Address:</string>
    <string name="text_btn_send">SEND</string>
    <string name="hint_enter_phone">Enter a phone number</string>
    <string name="hint_enter_email">Enter an email address</string>
</resources>
